Adding Lat & Long fields in Company attributes
